add shade support

--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
 		</div>
 		<header>
 			<div class="ni">
-				<aside id="ni1"></aside>
-				<aside id="ni2"></aside>
-				<aside id="ni3"></aside>
-				<aside id="ni4"></aside>
-				<aside id="ni5"></aside>
-				<aside id="ni6"></aside>
-				<aside id="ni7"></aside>
-				<aside id="ni8"></aside>
-				<aside id="ni9"></aside>
-				<aside id="ni10"></aside>
-				<aside id="ni11"></aside>
+				<aside id="ni1" data-color=""></aside>
+				<aside id="ni2" data-color=""></aside>
+				<aside id="ni3" data-color=""></aside>
+				<aside id="ni4" data-color=""></aside>
+				<aside id="ni5" data-color=""></aside>
+				<aside id="ni6" data-color=""></aside>
+				<aside id="ni7" data-color=""></aside>
+				<aside id="ni8" data-color=""></aside>
+				<aside id="ni9" data-color=""></aside>
+				<aside id="ni10" data-color=""></aside>
+				<aside id="ni11" data-color=""></aside>
 			</div>
 			<div class="nu">
-				<aside id="nu1"></aside>
-				<aside id="nu2"></aside>
-				<aside id="nu3"></aside>
-				<aside id="nu4"></aside>
-				<aside id="nu5"></aside>
-				<aside id="nu6"></aside>
-				<aside id="nu7"></aside>
-				<aside id="nu8"></aside>
-				<aside id="nu9"></aside>
-				<aside id="nu10"></aside>
-				<aside id="nu11"></aside>
+				<aside id="nu1" data-color=""></aside>
+				<aside id="nu2" data-color=""></aside>
+				<aside id="nu3" data-color=""></aside>
+				<aside id="nu4" data-color=""></aside>
+				<aside id="nu5" data-color=""></aside>
+				<aside id="nu6" data-color=""></aside>
+				<aside id="nu7" data-color=""></aside>
+				<aside id="nu8" data-color=""></aside>
+				<aside id="nu9" data-color=""></aside>
+				<aside id="nu10" data-color=""></aside>
+				<aside id="nu11" data-color=""></aside>
 			</div>
 			<div class="nuance"><p>Nuances</p></div>
 			<div class="alea"><p>Aléatoire</p></div>
