Ajout de la toolbar whited

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>ColorPicker</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="./css/jquery-ui.min.css" />
 		<link rel="stylesheet" href="./css/index.css" />
 		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
@@ -11,6 +10,8 @@
 		<div class="window"></div>
 		<div class="toolbar">
 			<p>ColorPicker</p>
+			<p id="nuances">Nuances</p>
+			<p id="random">Random</p>
 			<ul>
 				<li id="minimize"><div class="minimize"></div></li>
 				<li id="square"><div class="square"></div></li>
@@ -44,8 +45,8 @@
 				<aside id="nu10" data-color=""></aside>
 				<aside id="nu11" data-color=""></aside>
 			</div>
-			<div class="nuance"><p>Nuances</p></div>
-			<div class="alea"><p>Aléatoire</p></div>
+			<!--<div class="nuance"><p>Nuances</p></div>
+			<div class="alea"><p>Aléatoire</p></div>-->
 		</header>
 		<section class="edit-box">
 			<aside class="sliders">
