more support and fancy design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="window"></div>
 		<div class="toolbar">
-			<p>ColorPicker</p>
+			<p id="onTop">CP</p>
 			<p id="nuances">Nuances</p>
 			<p id="random">Random</p>
 			<ul>
@@ -64,9 +64,9 @@
 				</div>
 			</aside>
 			<aside class="inputs">
-				<input type="text" id="rangeRed" maxlength="3" />
-				<input type="text" id="rangeGreen" maxlength="3" />
-				<input type="text" id="rangeBlue" maxlength="3" />
+				<input type="number" id="rangeRed" maxlength="3" />
+				<input type="number" id="rangeGreen" maxlength="3" />
+				<input type="number" id="rangeBlue" maxlength="3" />
 			</aside>
 			<aside class="value">
 				<input type="text" id="numberHex" maxlength="7"/>
