--- a/index_osx.html
+++ b/index_osx.html
@@ -14,7 +14,8 @@
 				<li id="square"><div class="square"></div></li>
 			</ul>
 			<p id="onTop">CP</p>
-			<p id="nuances">Nuances</p>
+			<!--<p id="picker">{P}</p>-->
+			<p id="nuances">Shading</p>
 			<p id="random">Random</p>
 		</div>
 		<header>
