--- a/src/renderer/colorpicker/colorpicker.html
+++ b/src/renderer/colorpicker/colorpicker.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Colorpicker</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="css/app-buttons.css" />
-		<link rel="stylesheet" href="css/colorpicker.css" />
-		<link rel="stylesheet" href="css/fontawesome-all.min.css" />
-		<script defer src="js/color.class.js"></script>
-		<script defer src="js/colorpicker.class.js"></script>
-		<script defer src="js/colorpicker.events.js"></script>
-		<script defer src="js/util.class.js"></script>
+		<link rel="stylesheet" href="app-buttons.css" />
+		<link rel="stylesheet" href="colorpicker.css" />
+		<link rel="stylesheet" href="fontawesome-all.min.css" />
+		<script defer src="color.class.js"></script>
+		<script defer src="colorpicker.js"></script>
+		<script defer src="colorpicker.events.js"></script>
+		<script defer src="util.class.js"></script>
 	</head>
 	<body>
 		<div class="toolbar">
