--- a/src/renderer/colorpicker/colorpicker.html
+++ b/src/renderer/colorpicker/colorpicker.html
@@ -31,9 +31,7 @@
         </div>
         <input type="number" id="alpha_value" step="0.1" min="0" max="1" />
       </section>
-      <aside id="hexBox">
-        <input type="text" id="hexInput" maxlength="7"/>
-      </aside>
+      <aside id="hexBox"></aside>
     </section>
   </body>
 </html>
