WIP: starting fresh

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
+    <title>Colorpicker</title>
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-    <script type="module" src="/src/app.tsx"></script>
+    <script type="module" src="/src/react/app.tsx"></script>
   </body>
 </html>
